# Templete

./: .gitignore  CMakeLists.txt  README.md
Inc/: main.h
Src/: main.cpp
Test/: test.cpp
